# django-scalable-chat

./: .env  .parameters.json  .secrets.json  app.py
scalable_django_chat/: database_stack.py  deployment_stage.py  dns_route_to_alb_stack.py  external_secrets_stack.py  message_broker_stack.py  my_django_chat_app_stack.py  network_stack.py  scalable_django_chat_stack.py  static_files_stack.py
scripts/: run_cmd.py  set_env_vars.sh  set_parameters.py
src/: pyproject.toml  requirements.txt
src/chat/: views.py
src/config/: asgi.py  urls.py
src/config/settings/: base.py  ci_tests.py  local.py  prod.py  stage.py
src/docker/: .env  docker-compose.yml
src/docker/chat/: Dockerfile  entrypoint.sh  start-dev-server.sh  start-prod-server.sh
src/users/migrations/: 0001_initial.py
tests/unit/: test_scalable_django_chat_stack.py
