[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["shubham-dsdlawfirm <147094096+shubham-dsdlawfirm@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
channels = "^4.1.0"
psycopg2-binary = "^2.9.9"
channels-redis = "^4.2.0"
daphne = "^4.1.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
